# serializer version: 1
# name: TestEvaluatedSiaeSanctionView.test_no_sanction
  '''
  <div class="card-body">
      <h2>
          Sanction
      </h2>
      <h3 class="mt-5">
          Ne pas sanctionner
      </h3>
      <div class="card">
          <div class="card-body">
              Ça ira pour cette fois.
          </div>
      </div>
  </div>
  
  '''
# ---
# name: TestEvaluatedSiaeSanctionView.test_permanent_suspension
  '''
  <div class="card-body">
      <h2>
          Sanction
      </h2>
      <h3 class="mt-5">
          Retrait définitif de la capacité d’auto-prescription
      </h3>
      <p>
          La capacité à prescrire un parcours est rompue, elle peut être rétablie par le préfet, à la demande de la structure, sous réserve de la participation de ses dirigeants ou salariés à des actions de formation définies par l'autorité administrative.
      </p>
      <p>
          Dans votre cas, le retrait définitif de la capacité d’auto-prescription sera effectif à partir du 1 janvier 2023.
      </p>
  </div>
  
  '''
# ---
# name: TestEvaluatedSiaeSanctionView.test_subsidy_cut_full
  '''
  <div class="card-body">
      <h2>
          Sanction
      </h2>
      <h3 class="mt-5">
          Suppression
                                      
                                      de l’aide au poste
      </h3>
      <p>
          La suppression de l’aide attribuée aux salariés s’apprécie par l'autorité administrative, par imputation de l’année N+1. Cette notification s’accompagne d’une demande conforme auprès de l’ASP de la part du préfet. Lorsque le département a participé aux aides financières concernées en application de l'article L. 5132-2, le préfet informe le président du conseil départemental de sa décision en vue de la récupération, le cas échéant, des montants correspondants.
      </p>
      <p>
          Dans votre cas, la suppression
                                      
                                      de l’aide au poste sera effective à partir du 1 janvier 2023 et jusqu’au 1 juin 2023.
      </p>
  </div>
  
  '''
# ---
# name: TestEvaluatedSiaeSanctionView.test_subsidy_cut_rate
  '''
  <div class="card-body">
      <h2>
          Sanction
      </h2>
      <h3 class="mt-5">
          Suppression
                                      d’une partie
                                      de l’aide au poste
      </h3>
      <p>
          La suppression de l’aide attribuée aux salariés s’apprécie par l'autorité administrative, par imputation de l’année N+1. Cette notification s’accompagne d’une demande conforme auprès de l’ASP de la part du préfet. Lorsque le département a participé aux aides financières concernées en application de l'article L. 5132-2, le préfet informe le président du conseil départemental de sa décision en vue de la récupération, le cas échéant, des montants correspondants.
      </p>
      <p>
          Dans votre cas, la suppression
                                      
                                          de 35 %
                                      
                                      de l’aide au poste sera effective à partir du 1 janvier 2023 et jusqu’au 1 juin 2023.
      </p>
  </div>
  
  '''
# ---
# name: TestEvaluatedSiaeSanctionView.test_temporary_suspension
  '''
  <div class="card-body">
      <h2>
          Sanction
      </h2>
      <h3 class="mt-5">
          Retrait temporaire de la capacité d’auto-prescription
      </h3>
      <p>
          La capacité d’auto-prescrire un parcours d'insertion par l'activité économique est suspendue pour une durée déterminée par l'autorité administrative.
      </p>
      <p>
          Dans votre cas, le retrait temporaire de la capacité d’auto-prescription sera effectif à partir du 1 janvier 2023 et jusqu’au 1 juin 2023.
      </p>
  </div>
  
  '''
# ---
# name: TestEvaluatedSiaeSanctionView.test_training_session
  '''
  <div class="card-body">
      <h2>
          Sanction
      </h2>
      <h3 class="mt-5">
          Participation à une session de présentation de l’auto-prescription
      </h3>
      <div class="card">
          <div class="card-body">
              <p>
                  RDV le 18 avril à 14h dans les locaux de Pôle Emploi.
              </p>
          </div>
      </div>
  </div>
  
  '''
# ---
